k8s/demo/root-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-app
  namespace: demo
  labels:
    k8s-app: demo-root
    part-of: demo
    example-label: geen_ideee
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.root-app: "semver:>=0.1.0"
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: root-app
  template:
    metadata:
      labels:
        app: root-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: root-app
        image: harbor.k8s-local.io/demo/http-echo:6.17.25
        ports:
        - containerPort: 5678
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
            cpu: "10m"
        livenessProbe:
          exec:
            command:
            - /usr/local/bin/healthcheck
            - -url
            - http://localhost:80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - /usr/local/bin/healthcheck
            - -url
            - http://localhost:80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 30
