k8s/demo/service.yaml
---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: demo
  labels:
    k8s-app: demo-banana-service
    part-of: demo
spec:
  selector:
    app: banana-app
  ports:
    - name: http
      port: 80
      targetPort: 80
---

kind: Service
apiVersion: v1
metadata:
  name: root-service
  namespace: demo
  labels:
    k8s-app: demo-root-service
    part-of: demo
spec:
  selector:
    app: root-app
  ports:
    - name: http
      port: 80
      targetPort: 80
